--- a/manager_prj/src/assets/css/resetPassword.css
+++ b/manager_prj/src/assets/css/resetPassword.css
@@ -151,11 +151,17 @@
 .form-input__list {
   position: relative;
   width: 100%;
-  margin: 25px 0;
+  margin: 0;
 }
 .form-input__icon {
   position: absolute;
   top: 50%;
   right: 45%;
   transform: translate(50%, -50%);
+}
+.error__oldPass {
+  display: block;
+  padding: 6px 0 8px;
+  color: red;
+  font-size: 12px;
 }
